--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="git.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\zhaoxiaoqian\Desktop\eee\Git-Example\git.css">
     <title>Angel baby</title>
 
 </html>
@@ -13,6 +13,8 @@
 
 <body>
     <h1>bkppszd</h1>
+    <p>1=1</p>
+    <p>2=2</p>
 </body>
 
 </html>
